--- a/packer/http/ks.cfg
+++ b/packer/http/ks.cfg
@@ -28,6 +28,25 @@ reboot
 
 %packages --nobase
 @core
+
+#Exclude Intel Wireless drivers
+-iwl100-firmware
+-iwl105-firmware
+-iwl135-firmware
+-iwl1000-firmware
+-iwl2000-firmware
+-iwl2030-firmware
+-iwl3160-firmware
+-iwl3945-firmware
+-iwl4965-firmware
+-iwl5000-firmware
+-iwl5150-firmware
+-iwl6000-firmware
+-iwl6050-firmware
+-iwl7260-firmware
+-iwl6000g2a-firmware
+-iwl6000g2b-firmware
+
 %end
 
 %post
