Remove more unnecessary firmware - SAS sequencers, video capture cards.

--- a/packer/http/ks.cfg
+++ b/packer/http/ks.cfg
@@ -29,7 +29,7 @@ reboot
 %packages --nobase
 @core
 
-#Exclude Intel Wireless drivers
+#Exclude Intel Wireless firmware
 -iwl100-firmware
 -iwl105-firmware
 -iwl135-firmware
@@ -46,6 +46,12 @@ reboot
 -iwl7260-firmware
 -iwl6000g2a-firmware
 -iwl6000g2b-firmware
+
+#Exclude video capture firmware
+-ivtv-firmware
+
+#Exclude adaptec SAS Sequencer firmware
+-aic94xx-firmware
 
 %end
 
