Remove even more Intel wireless drivers.

--- a/packer/http/ks.cfg
+++ b/packer/http/ks.cfg
@@ -46,6 +46,8 @@ reboot
 -iwl7260-firmware
 -iwl6000g2a-firmware
 -iwl6000g2b-firmware
+-ipw2100-firmware
+-ipw2200-firmware
 
 #Exclude video capture firmware
 -ivtv-firmware
