"But wait, there's more!" Removing Marvell wireless firmware.

--- a/packer/http/ks.cfg
+++ b/packer/http/ks.cfg
@@ -49,6 +49,11 @@ reboot
 -ipw2100-firmware
 -ipw2200-firmware
 
+#Exclude Marvell wireless firmware
+-libertas-sd8686-firmware
+-libertas-sd8787-firmware
+-libertas-usb8388-firmware
+
 #Exclude video capture firmware
 -ivtv-firmware
 
