Added logging to %post, journalctl persistency fix.

--- a/packer/http/ks.cfg
+++ b/packer/http/ks.cfg
@@ -62,6 +62,10 @@ reboot
 
 %end
 
-%post
+%post --log=/root/ks-post.log
+
+# Add folder to keep journald data so it persists across reboots
+mkdir /var/log/journal
+chmod 700 /var/log/journal
 
 %end
